fix: show last release on cash flow page on mobile view

--- a/src/app/main/pages/cash-flow/views/principal/cash-flow.component.scss
+++ b/src/app/main/pages/cash-flow/views/principal/cash-flow.component.scss
@@ -17,6 +17,10 @@
 
       .card {
         width: 100% !important;
+
+        app-releases-list {
+          margin-bottom: 7rem !important;
+        }
       }
 
       #balances-component {
