--- a/src/app/main/pages/credit-card-invoice/views/principal/credit-card-invoice.component.scss
+++ b/src/app/main/pages/credit-card-invoice/views/principal/credit-card-invoice.component.scss
@@ -15,6 +15,10 @@
 }
 
 @media screen and (max-width: 1300px) {
+  ::-webkit-scrollbar {
+    display: none !important;
+  }
+
   header {
     .first-row {
       .left {
@@ -33,6 +37,12 @@
 @media screen and (max-width: 650px) {
   .simple-page {
     .content {
+      .releases-card {
+        header {
+          margin-bottom: 0.8rem !important;
+        }
+      }
+
       .totals {
         padding: 1rem 0 !important;
 
@@ -169,7 +179,6 @@
       #releases-list {
         flex: 1;
         overflow-y: scroll;
-        padding: 0 1.2rem;
       }
 
       .totals {
